feat(repology): add homepage key
